--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Регистрация</title>
+  <!-- test -->
   <!-- Можно добавить стили для улучшения визуального восприятия -->
   <style>
     /* Добавьте стили по вашему усмотрению */
